--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "sharp": "^0.32.0"
   }
 }
