--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-download-link": "^2.3.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "router-dom": "^2.2.10"
